application.yml 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     active: local
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:sikbbang}
+    url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:aq-project}
     username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:pwpwpw}
+    password: ${DB_PASSWORD:}
   jpa:
     hibernate:
       ddl-auto: update
