--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,8 +2,6 @@ server:
     port: 8080
 
 spring:
-    profiles:
-        active: ${SPRING_PROFILES_ACTIVE:local}
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:aq-project}
@@ -15,8 +13,8 @@ spring:
         database-platform: org.hibernate.dialect.MySQLDialect
         properties:
             hibernate:
-                format_sql: true
-        show-sql: true
+                format_sql: false
+        show-sql: false
     servlet:
         multipart:
             max-file-size: 5MB
@@ -39,3 +37,9 @@ jwt:
     refresh:
         expiration: ${JWT_REFRESH_EXPIRATION}
         header: ${JWT_REFRESH_HEADER:RefreshToken}
+
+logging:
+    level:
+        com.example.aq: INFO
+        org.springframework.security: INFO
+        org.hibernate.SQL: WARN
