--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,4 +1,9 @@
+server:
+    port: 8080
+
 spring:
+    profiles:
+        active: test
     datasource:
         url: jdbc:h2:mem:testdb
         driver-class-name: org.h2.Driver
@@ -9,9 +14,21 @@ spring:
             ddl-auto: create-drop
         database-platform: org.hibernate.dialect.H2Dialect
         show-sql: true
+        properties:
+            hibernate:
+                format_sql: true
     h2:
         console:
             enabled: true
+
+springdoc:
+    api-docs:
+        path: /v3/api-docs
+    swagger-ui:
+        path: /swagger-ui.html
+        url: /v3/api-docs
+        display-request-duration: true
+        groups-order: ASC
 
 jwt:
     secretKey: test-secret-key-for-testing-purposes-only-make-it-long-enough
