--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,6 +88,7 @@ jobs:
                         -e JWT_ACCESS_HEADER=${{ env.JWT_ACCESS_HEADER }} \
                         -e JWT_REFRESH_EXPIRATION=${{ env.JWT_REFRESH_EXPIRATION }} \
                         -e JWT_REFRESH_HEADER=${{ env.JWT_REFRESH_HEADER }} \
+                        -e SSL_ENABLED=true \
                         -e SSL_KEYSTORE_PASSWORD=${{ secrets.SSL_KEYSTORE_PASSWORD }} \
                         -e S3_REGION=${{ secrets.S3_REGION }} \
                         -e S3_BUCKETNAME=${{ secrets.S3_BUCKETNAME }} \
