--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ server:
         key-store-password: ${SSL_KEYSTORE_PASSWORD:changeit}
         key-store-type: PKCS12
         key-alias: ${SSL_KEY_ALIAS:springboot}
+        port: ${SERVER_SSL_PORT:8443}
 
 spring:
     profiles:
