--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,8 +59,7 @@ jobs:
                   ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
                   IMAGE_TAG: ${{ github.sha }}
               run: |
-                  docker build --build-arg SSL_KEYSTORE_PASSWORD=${{ secrets.SSL_KEYSTORE_PASSWORD }} \
-                    -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+                  docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
                   docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
             - name: Deploy to EC2 instance
@@ -78,61 +77,7 @@ jobs:
 
                       docker pull ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
 
-                      # SSL 인증서 확인 및 설정
-                      if [ ! -d "/etc/letsencrypt/live/aq-project.duckdns.org" ]; then
-                          echo "SSL 인증서가 없습니다. Let's Encrypt 인증서를 발급합니다..."
-                          
-                          # 포트 80 사용 중인 프로세스 확인 및 중지
-                          echo "포트 80 사용 중인 프로세스 확인 중..."
-                          sudo lsof -ti:80 | xargs -r sudo kill -9 || true
-                          sudo fuser -k 80/tcp || true
-                          sleep 3
-                          
-                          # 포트 80이 비어있는지 확인
-                          if sudo netstat -tlnp | grep :80; then
-                              echo "포트 80이 여전히 사용 중입니다. 강제로 해제합니다..."
-                              sudo pkill -f "python.*certbot" || true
-                              sudo pkill -f "certbot" || true
-                              sleep 2
-                          fi
-                          
-                          # Certbot 설치 확인
-                          if ! command -v certbot &> /dev/null; then
-                              echo "Certbot 설치 중..."
-                              sudo yum update -y
-                              sudo yum install -y certbot
-                          fi
-                          
-                          # SSL 인증서 발급 (포트 80 확보 후)
-                          sudo certbot certonly --standalone \
-                              --non-interactive \
-                              --email admin@aq-project.duckdns.org \
-                              --agree-tos \
-                              --no-eff-email \
-                              -d aq-project.duckdns.org
-                          
-                          # PKCS12 형식으로 변환
-                          sudo openssl pkcs12 -export \
-                              -in /etc/letsencrypt/live/aq-project.duckdns.org/fullchain.pem \
-                              -inkey /etc/letsencrypt/live/aq-project.duckdns.org/privkey.pem \
-                              -out /etc/letsencrypt/live/aq-project.duckdns.org/keystore.p12 \
-                              -name springboot \
-                              -passout pass:${{ secrets.SSL_KEYSTORE_PASSWORD }}
-                          
-                          # 권한 설정
-                          sudo chown root:root /etc/letsencrypt/live/aq-project.duckdns.org/keystore.p12
-                          sudo chmod 644 /etc/letsencrypt/live/aq-project.duckdns.org/keystore.p12
-                      else
-                          echo "SSL 인증서가 이미 존재합니다."
-                      fi
-
-                      docker run -d --name my-app -p 8080:8080 -p 8443:8443 \
-                        -v /etc/letsencrypt/live:/app/ssl:ro \
-                        -e SERVER_SSL_ENABLED=true \
-                        -e SERVER_SSL_KEY_STORE=/app/ssl/aq-project.duckdns.org/keystore.p12 \
-                        -e SERVER_SSL_KEY_STORE_PASSWORD=${{ secrets.SSL_KEYSTORE_PASSWORD }} \
-                        -e SERVER_SSL_KEY_STORE_TYPE=PKCS12 \
-                        -e SERVER_SSL_KEY_ALIAS=springboot \
+                      docker run -d --name my-app -p 8080:8080 \
                         -e DB_HOST=${{ secrets.DB_HOST }} \
                         -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
                         -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
@@ -143,6 +88,4 @@ jobs:
                         -e JWT_REFRESH_EXPIRATION=${{ env.JWT_REFRESH_EXPIRATION }} \
                         -e JWT_REFRESH_HEADER=${{ env.JWT_REFRESH_HEADER }} \
                         -e KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }} \
-                        -e S3_REGION=${{ secrets.S3_REGION }} \
-                        -e S3_BUCKETNAME=${{ secrets.S3_BUCKETNAME }} \
                         ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
