--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
     port: 8080
 
 spring:
+    main:
+        allow-bean-definition-overriding: true
     profiles:
         active: local
     datasource:
@@ -17,6 +19,11 @@ spring:
             hibernate:
                 format_sql: true
         show-sql: true
+
+jwt:
+    secret: ${JWT_SECRET:default-secret-key-for-development-only-change-in-production}
+    access-token-validity-in-seconds: 3600 # 1시간
+    refresh-token-validity-in-seconds: 604800 # 7일
 
 springdoc:
     api-docs:
