--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,9 @@ spring:
             hibernate:
                 format_sql: true
         show-sql: true
+    sql:
+        init:
+            mode: never
 
 jwt:
     secret: ${JWT_SECRET:default-secret-key-for-development-only-change-in-production}
