--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,9 +1,6 @@
-server:
-    port: ${SERVER_PORT:8080}
-
+# 프로덕션 환경 설정
 spring:
     datasource:
-        driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://${DB_HOST:aq-skhu.cdcs8k8y466i.ap-northeast-2.rds.amazonaws.com}:${DB_PORT:3306}/${DB_NAME:aq_skhu}?useSSL=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
         username: ${DB_USERNAME}
         password: ${DB_PASSWORD}
@@ -13,23 +10,14 @@ spring:
             connection-timeout: 30000
             idle-timeout: 600000
             max-lifetime: 1800000
+    
     jpa:
         hibernate:
-            ddl-auto: update
-        database-platform: org.hibernate.dialect.MySQLDialect
+            ddl-auto: validate
         properties:
             hibernate:
                 format_sql: false
         show-sql: false
-
-springdoc:
-    api-docs:
-        path: /v3/api-docs
-    swagger-ui:
-        path: /swagger-ui.html
-        url: /v3/api-docs
-        display-request-duration: true
-        groups-order: ASC
 
 logging:
     level:
