--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,20 @@
 server:
-    port: 8080
+    port: ${SERVER_PORT:8080}
 
 spring:
     profiles:
-        active: local
+        active: ${SPRING_PROFILES_ACTIVE:local}
+
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:aq-project}
+        url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:aq-project}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
         username: ${DB_USERNAME:root}
         password: ${DB_PASSWORD:}
+
     jpa:
         hibernate:
-            ddl-auto: update
+            ddl-auto: ${DDL_AUTO:update}
         database-platform: org.hibernate.dialect.MySQLDialect
-        properties:
-            hibernate:
-                format_sql: true
-        show-sql: true
 
 springdoc:
     api-docs:
