--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,13 +7,14 @@ spring:
         hikari:
             maximum-pool-size: 10
             minimum-idle: 5
-            connection-timeout: 30000
+            connection-timeout: 60000
             idle-timeout: 600000
             max-lifetime: 1800000
 
     jpa:
         hibernate:
             ddl-auto: validate
+        database-platform: org.hibernate.dialect.MySQLDialect
         properties:
             hibernate:
                 format_sql: false
