--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+# 기본 설정 (모든 프로파일에서 공통으로 사용)
 server:
     port: ${SERVER_PORT:8080}
 
@@ -7,14 +8,23 @@ spring:
 
     datasource:
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:aq-project}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+        url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:aq-project}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
         username: ${DB_USERNAME:root}
         password: ${DB_PASSWORD:}
+        hikari:
+            maximum-pool-size: 5
+            minimum-idle: 2
+            connection-timeout: 30000
 
     jpa:
         hibernate:
             ddl-auto: ${DDL_AUTO:update}
         database-platform: org.hibernate.dialect.MySQLDialect
+        properties:
+            hibernate:
+                format_sql: false
+        show-sql: false
+        open-in-view: false
 
     mail:
         host: smtp.gmail.com
