--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,9 +92,8 @@ jobs:
               -e DB_NAME="${{ secrets.DB_NAME }}" \
               -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
               -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-              -e JWT_SECRET_KEY="${{ secrets.JWT_SECRET_KEY }}" \
-              -e JWT_ACCESS_EXPIRATION="${{ secrets.JWT_ACCESS_EXPIRATION }}" \
-              -e JWT_ACCESS_HEADER="${{ secrets.JWT_ACCESS_HEADER }}" \
-              -e JWT_REFRESH_EXPIRATION="${{ secrets.JWT_REFRESH_EXPIRATION }}" \
-              -e JWT_REFRESH_HEADER="${{ secrets.JWT_REFRESH_HEADER }}" \
+              -e JWT_SECRET="${{ secrets.JWT_SECRET }}" \
+              -e MAIL_USERNAME="${{ secrets.MAIL_USERNAME }}" \
+              -e MAIL_PASSWORD="${{ secrets.MAIL_PASSWORD }}" \
+              -e FRONTEND_URL="${{ secrets.FRONTEND_URL }}" \
               "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
