--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -42,8 +42,8 @@ spring:
                     writetimeout: 5000
 
 jwt:
-    secret: ${JWT_SECRET}
-    expiration: 86400000
+    secret: ${JWT_SECRET:}
+    expiration: ${JWT_EXPIRATION:86400000}
 
 springdoc:
     api-docs:
